<resources>
    <string name="app_name">wx</string>
    <string name="item_add">add_item</string>
    <string name="item_remove">remove_item</string>
    <string name="intent_xianshi">Intent显式转化</string>
    <string name="tiaozhuan">Intent百度</string>
    <string name="zhishi">指示</string>
    <string name="progressbar">progressbar</string>
    <string name="AlterDialog">AlterDialog</string>
    <string name="progressDialog">progressDialog</string>
    <string name="fragment">fragment</string>
    <string name="leftfragment">leftfragment</string>
    <string name="call">call</string>
    <string name="notification">notification</string>
    <string name="takephoto">拍照</string>
    <string name="openalbmu">打开相册</string>
    <string name="mediaplay">播放音乐</string>
    <string name="videoplay">播放视频</string>
    <string name="openweb">openweb</string>
    <string name="title_activity_webactivity">webactivity</string>
    <string name="jiexijson">解析json</string>
    <string name="startdown">开始下载</string>
    <string name="pausedown">暂停下载</string>
    <string name="canceldown">取消下载</string>
    <string name="drawershow">Drawershow</string>
    <string name="mail">dalianmiwei@126.com</string>
    <string name="username">delamey</string>
    <string name="title_activity_detail_item_activity">detail_item_activity</string>
</resources>
