<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dell.wx.MainActivity"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <Button
        android:layout_weight="1"
        android:textAllCaps="false"
        android:text="@string/intent_xianshi"
        android:id="@+id/xianshi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:layout_weight="1"
        android:textAllCaps="false"
        android:id="@+id/seebar"
        android:text="@string/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:layout_weight="1"
        android:textAllCaps="false"
        android:text="@string/AlterDialog"
        android:id="@+id/AlterDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:textAllCaps="false"
        android:layout_weight="1"
        android:text="@string/progressDialog"
        android:id="@+id/progressDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        style="?android:attr/progressBarStyleHorizontal"/>
    <Button
        android:text="@string/fragment"
        android:textAllCaps="false"
        android:id="@+id/Fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="100dp">
    <fragment
        android:id="@+id/leftframent"
        android:name="com.example.dell.wx.Leftfrangment"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        tools:ignore="Suspicious0dp" />

    <FrameLayout
        android:layout_weight="1"
        android:id="@+id/right_fragment"
        android:layout_height="match_parent"
        android:layout_width="0dp" />
    </LinearLayout>

<Button
    android:text="@string/call"
    android:id="@+id/phone"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />
<ListView
    android:id="@+id/listView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>

</LinearLayout>
