<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dell.wx.Second"
    android:orientation="vertical">

    <TextView
        android:gravity="center"
        android:id="@+id/zhishi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zhishi" />
<Button
    android:textAllCaps="false"
    android:text="@string/tiaozhuan"
    android:id="@+id/tiaozhuan"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
    <Button
        android:text="@string/notification"
        android:id="@+id/notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:layout_weight="1"
            android:id="@+id/fragment2"
            android:name="com.example.dell.wx.fragmentsecond"
            android:layout_width="match_parent"
            android:layout_height="100dp" />
        <ListView
            android:id="@+id/secondlistview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </ListView>
    </LinearLayout>
</LinearLayout>
